--- a/Test_Spring_Core/pom.xml
+++ b/Test_Spring_Core/pom.xml
@@ -18,6 +18,13 @@
 			<artifactId>spring-boot-starter</artifactId>
 			<version>1.0.0.RELEASE</version>
 		</dependency>
+				<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.0.5</version>
+		</dependency>
+
 	</dependencies>
 
 
